WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
106727
DFG should not forget that it had proved something to be a constant during a merge just because it's merging against the empty value
https://bugs.webkit.org/show_bug.cgi?id=106727
Summary
DFG should not forget that it had proved something to be a constant during a ...
Filip Pizlo
Reported
2013-01-11 22:14:52 PST
Patch forthcoming.
Attachments
the patch
(2.11 KB, patch)
2013-01-11 22:18 PST
,
Filip Pizlo
oliver
: review+
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Filip Pizlo
Comment 1
2013-01-11 22:18:41 PST
Created
attachment 182458
[details]
the patch
Filip Pizlo
Comment 2
2013-01-11 22:21:55 PST
This blocks
https://bugs.webkit.org/show_bug.cgi?id=106690
because it slightly masks that bug. When trying to come up with a reduced case of that other bug, I couldn't, because the CFA was artificially dumbing itself down so that it became too dumb to make the mistake that that bug fixes. :-/
Filip Pizlo
Comment 3
2013-01-14 16:58:14 PST
Landed in
http://trac.webkit.org/changeset/139688
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug